--- a/openmole/tps/.gitignore
+++ b/openmole/tps/.gitignore
@@ -1,4 +1,6 @@
 3_sensitivity.tgz
 8_spatialsens.tgz
 9_spatialsens.tgz
+exmodelight/2_sampling/zombies-bundle_3-0.1.0-SNAPSHOT.jar
+exmodelight/2_sampling.tgz
 
